Fix some filenames

--- a/.commit/config.yml
+++ b/.commit/config.yml
@@ -5,7 +5,7 @@ commit:
   groups:
     - name: "ruby"
       templates:
-        - source: "ruby/ruby-version"
+        - source: "ruby/ruby-version.erb"
           destination: "./ruby-version"
 
     - name: "ruby-gem"
