--- a/.commit/config.yml
+++ b/.commit/config.yml
@@ -6,8 +6,16 @@ commit:
   groups:
     - name: "ruby"
       templates:
+        - source: "ruby/rspec.erb"
+          destination: "./.rspec"
+
+      templates:
         - source: "ruby/ruby-version.erb"
           destination: "./.ruby-version"
+
+      templates:
+        - source: "ruby/standard.yml.erb"
+          destination: "./.standard.yml"
 
     - name: "ruby-gem"
       templates:
