Define rspec, standard in separate groups

--- a/.commit/config.yml
+++ b/.commit/config.yml
@@ -6,13 +6,15 @@ commit:
   groups:
     - name: "ruby"
       templates:
-        - source: "ruby/rspec.erb"
-          destination: "./.rspec"
-
-      templates:
         - source: "ruby/ruby-version.erb"
           destination: "./.ruby-version"
 
+    - name: "ruby-rspec"
+      templates:
+        - source: "ruby/rspec.erb"
+          destination: "./.rspec"
+
+    - name: "ruby-standard"
       templates:
         - source: "ruby/standard.yml.erb"
           destination: "./.standard.yml"
