--- a/.commit/config.yml
+++ b/.commit/config.yml
@@ -1,5 +1,6 @@
 commit:
   dependents:
+    - repo: metabahn/b3bm
     - repo: metabahn/commit-test
     - repo: metabahn/contentfs
     - repo: metabahn/corerb
