Add b3e as a dependent repo

--- a/.commit/config.yml
+++ b/.commit/config.yml
@@ -1,6 +1,7 @@
 commit:
   dependents:
     - repo: metabahn/b3bm
+    - repo: metabahn/b3e
     - repo: metabahn/branca
     - repo: metabahn/commit-test
     - repo: metabahn/contentfs
