--- a/.commit/config.yml
+++ b/.commit/config.yml
@@ -8,6 +8,8 @@ commit:
     - repo: metabahn/corerb
     - repo: metabahn/isrb
     - repo: metabahn/llhttp
+    - repo: metabahn/proc-javascript
+    - repo: metabahn/proc-ruby
     - repo: metabahn/stringdoc
 
   groups:
